# clash-monad

./: clash-monad.cabal  flake.nix  hie.yaml
src/: HW.hs
src/Clash/: Monad.hs  Synchronous.hs
src/Data/: Free.hs
src/Examples/: Blink.hs  Rename.hs
src/HW/: AsyncRAM.hs  HWM.hs  Module.hs  Register.hs
