cabal-version:      2.2
name:               clash-monad
version:            0.0.0
maintainer:         exclusiveandgate@gmail.com
build-type:         Simple

library
    default-language: Haskell2010

    default-extensions:
        BangPatterns
        LambdaCase
        NoStarIsType
        TypeFamilies
        TypeOperators

    hs-source-dirs: src

    ghc-options: -Wall -Wcompat

    build-depends:
        base                    >= 4.18     && < 5,
        primitive,
        silicon,
