cabal-version:      2.2
name:               clash-monad
version:            0.0.0
maintainer:         exclusiveandgate@gmail.com
build-type:         Simple

library
    default-language: Haskell2010

    default-extensions:
        BangPatterns
        DefaultSignatures
        EmptyCase
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        NoStarIsType
        TupleSections
        TypeFamilies
        TypeOperators

    hs-source-dirs: src

    exposed-modules:
        HW
        HW.HWM
        HW.Module
        HW.AsyncRAM
        HW.Register
        Data.Free

    ghc-options: -Wall -Wcompat

    build-depends:
        base                    >= 4.18     && < 5,
        primitive,
        silicon,
